Fixed bug that allowed description text field to overflow the form background box.

--- a/portfolio/src/main/resources/static/styles/styles.css
+++ b/portfolio/src/main/resources/static/styles/styles.css
@@ -187,6 +187,7 @@ button:hover {
 
 .description textarea {
     background-color: transparent;
+    max-width: calc(100% - 20px);
 }
 
 .description label {
